fix some broken bib files, improve publication parsing and display

--- a/src/content/publications/gieschke_2021.bib
+++ b/src/content/publications/gieschke_2021.bib
@@ -3,7 +3,7 @@
                   Rechert, Klaus},
   title        = {{Enabling Portable Data-centric Scientific Software Environments --
                   Connecting Preserved Software with Data Providers}},
-  year         = 2021,
+  year         = {2021},
   booktitle    = {Poster,
                   E-Science-Tage 2021: Share Your Research Data,
                   Heidelberg,
