--- a/src/content/publications/cochrane_2023.bib
+++ b/src/content/publications/cochrane_2023.bib
@@ -3,7 +3,7 @@
                   Gates, Ethan and
                   Gieschke, Rafael},
   title        = {{Establishing an Open-Source Package "Archive"}},
-  year         = 2023,
+  year         = {2023},
   booktitle    = {Poster, Proceedings of the 19th
                   International Conference on Digital Preservation,
                   iPRES 2023, Champaign-Urbana, Illinois,
