--- a/src/content/publications/oberhauser_2023.bib
+++ b/src/content/publications/oberhauser_2023.bib
@@ -4,7 +4,7 @@
                   Rechert, Klaus and
                   von Suchodoletz, Dirk},
   title        = {{Preserving Computational Workflows}},
-  year         = 2023,
+  year         = {2023},
   booktitle    = {PV2023: Adding value (to) and preserving
                   Scientific \& Technical data, Geneva, Switzerland,
                   May, 2-4, 2023},
