updated file names, fixed some bibtex files

--- a/src/content/publications/cochrane_2023.bib
+++ b/src/content/publications/cochrane_2023.bib
@@ -2,7 +2,7 @@
   author       = {Cochrane, Euan and
                   Gates, Ethan and
                   Gieschke, Rafael},
-  title        = {{Establishing an Open-Source Package "Archive"}},
+  title        = {Establishing an Open-Source Package "Archive"},
   year         = {2023},
   booktitle    = {Poster, Proceedings of the 19th
                   International Conference on Digital Preservation,
