--- a/src/content/publications/gauza_2022.bib
+++ b/src/content/publications/gauza_2022.bib
@@ -1,5 +1,5 @@
 @conference_paper{44,
-author = {Holger Gauza|Steve Kaminski|Jens Kr̈uger|Fabian Paz|Halima Saker| Fabian Wannenmacher|Johannes Werner|Thomas Zajac|Olaf Brandt| Jan Kaltenbach},
+author = {Holger Gauza and Steve Kaminski and Jens Krüger and Fabian Paz and Halima Saker and Fabian Wannenmacher and Johannes Werner and Thomas Zajac and Olaf Brandt and Jan Kaltenbach},
 title = {Distributed but Integrated: Forming a ScienceGateway from Multiple Parts},
 journal = {Zenodo},
 doi = {https://doi.org/10.5281/zenodo.7883190},
