--- a/src/content/publications/krantz_2021.bib
+++ b/src/content/publications/krantz_2021.bib
@@ -1,5 +1,5 @@
 @review_paper{9,
-author = {Maria Krantz|David Zimmer|Stephan O. Adler|Anastasia Kitashova|Edda Klipp|Timo Mühlhaus|Thomas Nägele},
+author = {Maria Krantz and David Zimmer and Stephan O. Adler and Anastasia Kitashova and Edda Klipp and Timo Mühlhaus and Thomas Nägele},
 title = {Data Management and Modeling in Plant Biology},
 journal = {Frontiers Media S.A.},
 doi = {https://doi.org/10.3389/fpls.2021.717958},
