--- a/src/content/publications/leendertse_2023.bib
+++ b/src/content/publications/leendertse_2023.bib
@@ -1,8 +1,8 @@
 @conference_paper{22,
-author = {Leendertse, Jan| Suchodoletz, Dirk von |Semaan, Saher},
+author = {Leendertse, Jan and Suchodoletz, Dirk von and Semaan, Saher},
 title = {Wege aus der Verantwortungsdiffusion - Vermittelnde Angebote zwischen Top-Down und Bottom-Up},
 journal = {heiBOOKS},
-doi = {accepted for publication},
+doi = {},
 year = {2023},
 note = {open access}
 }
