--- a/src/content/publications/muehlhaus_2021.bib
+++ b/src/content/publications/muehlhaus_2021.bib
@@ -1,5 +1,5 @@
 @conference_paper{13,
-author = {Timo Mühlhaus| Dominik Brilhaus| Marcel Tschöpe| Oliver Maus| Björn Grüning| Christoph Garth| Cristina Martins Rodrigues| Dirk von Suchodoletz},
+author = {Timo Mühlhaus and Dominik Brilhaus and Marcel Tschöpe and Oliver Maus and Björn Grüning and Christoph Garth and Cristina Martins Rodrigues and Dirk von Suchodoletz},
 title = {DataPLANT – Tools and Services to structure the Data Jungle for fundamental plant researchers},
 journal = {heiDOK, Universitätsbibiothek Heidelberg},
 doi = {https://doi.org/10.11588/heibooks.979.c13724},
