--- a/src/content/publications/rechert_2024.bib
+++ b/src/content/publications/rechert_2024.bib
@@ -1,8 +1,8 @@
 @article{rechert_2024,
   author       = {Rechert, Klaus and
                   Gieschke, Rafael},
-  title        = {{Preserving Secondary Knowledge --
-                  Using Language Models for Software Preservation}},
+  title        = {Preserving Secondary Knowledge --
+                  Using Language Models for Software Preservation},
   year         = {2024},
   journal      = {International Journal of Digital Curation}, 
   volume       = {"18"},
