--- a/src/content/publications/suchodoletz_2021b.bib
+++ b/src/content/publications/suchodoletz_2021b.bib
@@ -1,5 +1,5 @@
 @conference_paper{14,
-author = {Dirk von Suchodoletz| Timo Mühlhaus| Dominik Brilhaus| Hajira Jabeen| Björn Usadel| Jens Krüger| Holger Gauza| Cristina Martins Rodrigues},
+author = {Dirk von Suchodoletz and Timo Mühlhaus and Dominik Brilhaus and Hajira Jabeen and Björn Usadel and Jens Krüger and Holger Gauza and Cristina Martins Rodrigues},
 title = {Data Stewards as ambassadors between the NFDI and the community},
 journal = {heiDOK, Universitätsbibiothek Heidelberg},
 doi = {https://doi.org/10.11588/heibooks.979.c13750},
