--- a/src/content/publications/suchodoletz_2021d.bib
+++ b/src/content/publications/suchodoletz_2021d.bib
@@ -1,5 +1,5 @@
 @grant_application{7,
-author = {Dirk von Suchodoletz|Björn Usadel|Jens Krüger|Timo Mühlhaus},
+author = {Dirk von Suchodoletz and Björn Usadel and Jens Krüger and Timo Mühlhaus},
 title = {DataPLANT - NFDI Consortium for Fundamental Plant Research},
 journal = {Zenodo},
 doi = {https://doi.org/10.5281/zenodo.4836395},
