--- a/src/content/publications/suchodoletz_2022.bib
+++ b/src/content/publications/suchodoletz_2022.bib
@@ -1,5 +1,5 @@
 @conference_paper{15,
-author = {Dirk von Suchodoletz| Ulrich Hahn| Jonathan Bauer| Kolja Glogowski| Mark Seifert},
+author = {Dirk von Suchodoletz and Ulrich Hahn and Jonathan Bauer and Kolja Glogowski and Mark Seifert},
 title = {Storage for Science – Aktueller Stand und anstehende Entwicklungen eines verteilten FDM-Systems},
 journal = {heiDOK, Universitätsbibiothek Heidelberg},
 doi = {https://doi.org/10.11588/heibooks.979.c13741},
