--- a/src/content/publications/suchodoletz_2023e.bib
+++ b/src/content/publications/suchodoletz_2023e.bib
@@ -1,5 +1,5 @@
 @conference_paper{20,
-author = {Dirk von Suchodoletz| Jonathan Bauer| Marcel Tschöpe| Holger Gauza| Michael Derntl| Steve Kaminski},
+author = {Dirk von Suchodoletz and Jonathan Bauer and Marcel Tschöpe and Holger Gauza and Michael Derntl and Steve Kaminski},
 title = {Herausforderungen beim Aufbau eines föderierten Datenrepositories auf Basis von InvenioRDM},
 journal = {heiDOK, Universitätsbibiothek Heidelberg},
 doi = {https://doi.org/10.11588/heibooks.1288.c18069},
