--- a/src/content/publications/garth_2021.bib
+++ b/src/content/publications/garth_2021.bib
@@ -1,5 +1,5 @@
 @conference_paper{11,
-author = {Christoph Garth| Jonas Lukasczyk| Timo Mühlhaus| Benedikt Venn| Jens Krüger| Kolja Glogowski| Cristina Martins Rodrigues| Dirk von Suchodoletz},
+author = {Christoph Garth and Jonas Lukasczyk and Timo Mühlhaus and Benedikt Venn and Jens Krüger and Kolja Glogowski and Cristina Martins Rodrigues and Dirk von Suchodoletz},
 title = {Immutable yet evolving: ARCs for permanent sharing in the research data-time continuum},
 journal = {heiDOK, Universitätsbibiothek Heidelberg},
 doi = {https://doi.org/10.11588/heibooks.979.c13751},
