--- a/src/content/publications/gieschke_2021.bib
+++ b/src/content/publications/gieschke_2021.bib
@@ -1,8 +1,8 @@
 @inproceedings{gieschke_2021,
   author       = {Gieschke, Rafael and
                   Rechert, Klaus},
-  title        = {{Enabling Portable Data-centric Scientific Software Environments --
-                  Connecting Preserved Software with Data Providers}},
+  title        = {Enabling Portable Data-centric Scientific Software Environments --
+                  Connecting Preserved Software with Data Providers},
   year         = {2021},
   booktitle    = {Poster,
                   E-Science-Tage 2021: Share Your Research Data,
