--- a/src/content/publications/oberhauser_2023.bib
+++ b/src/content/publications/oberhauser_2023.bib
@@ -3,7 +3,7 @@
                   Gieschke, Rafael and
                   Rechert, Klaus and
                   von Suchodoletz, Dirk},
-  title        = {{Preserving Computational Workflows}},
+  title        = {Preserving Computational Workflows},
   year         = {2023},
   booktitle    = {PV2023: Adding value (to) and preserving
                   Scientific \& Technical data, Geneva, Switzerland,
