--- a/src/content/publications/suchodoletz_2021.bib
+++ b/src/content/publications/suchodoletz_2021.bib
@@ -2,7 +2,8 @@
 author = {D. von Suchodoletz and J. Leendertse and S. Semaan and K. Rechert and R. Gieschke and B. Goldammer und D. Tolkatsch},
 title = {Developing a holistic research data management strategy for a university},
 journal = {},
-doi = {https://doi.org/10.17605/OSF.IO/ACNSR },
+publisher = {OSF},
+doi = {https://doi.org/10.17605/OSF.IO/ACNSR},
 year = {2021},
 note = {open access}
 }
