--- a/src/content/publications/suchodoletz_2021c.bib
+++ b/src/content/publications/suchodoletz_2021c.bib
@@ -1,5 +1,5 @@
 @working_paper{8,
-author = {von Suchodoletz, Dirk|Brettschneider, Peter|Böker, Elisabeth|Apel, Jochen|Iglezakis, Dorothea|Schmidt, Karsten|Schneider, Gabriel},
+author = {von Suchodoletz, Dirk and Brettschneider, Peter and Böker, Elisabeth and Apel, Jochen and Iglezakis, Dorothea and Schmidt, Karsten and Schneider, Gabriel},
 title = {Leitfaden – Verantwortungsvoller Umgang mit Forschungsdaten},
 journal = {Zenodo},
 doi = {https://doi.org/10.5281/zenodo.5410396},
