add data hub sub pages

--- a/src/content/pages/datahub/trr365.md
+++ b/src/content/pages/datahub/trr365.md
@@ -1,5 +1,6 @@
 ---
-title: PLACEHOLDER
+title: TRR356 (PlantMicrobe)
+slug: trr356
 bg-color: white
 border-color: white
 emphasis-color: darkblue
@@ -8,4 +9,6 @@ layout: text-right-image-left
 index: 4
 ---
 
-trr365
+[The TRR356 (PlantMicrobe)](https://trr356plantmicrobe.de/for-members-only--gitlab/index.html) is an ARC Data Hub implementation specific for the transregional collaboration project PlantMicrobe and is hosted at the University of Tübingen and the LMU in Munich.
+Only members of the project TRR356 PlantMicrobe have access to this DataHUB and can publish data there.
+Like the nfdi4plants.de DataHUB, the PlantMicrobe DataHUB runs on a federated infrastructure that relies on fail-over strategies to ensure the availability of the service.
