fix all pub files

--- a/_old_src/content/publications/rodrigues_2023.bib
+++ b/_old_src/content/publications/rodrigues_2023.bib
@@ -1,4 +1,4 @@
-@conference_poster{27,
+@inproceedings{rodrigues_2023,
 author = {Martins Rodrigues, Cristina},
 title = {Managing your Research Data with DataPLANT},
 journal = {Zenodo},
