--- a/_old_src/content/publications/saker_2023.bib
+++ b/_old_src/content/publications/saker_2023.bib
@@ -1,4 +1,4 @@
-@conference_proceedings{48,
+@inproceedings{saker_2023,
 author = {Halima Saker and Holger Gauza and Jens Kruger and Amir Baleghi and Alexander Kirbis and Simon Pirkl and Stephan Hachinger and Alexander Wellmann and Johannes Munke and Mukund Biradar and Klaus F. X. Mayer},
 title = {Collaboration Across Boundaries: a Science},
 journal = {Tübingen University Press},
