--- a/_old_src/content/publications/stoeter_2023.bib
+++ b/_old_src/content/publications/stoeter_2023.bib
@@ -1,4 +1,4 @@
-@conference_poster{28,
+@inproceedings{stoeter_2023,
 author = {Stöter, Torsten and Gottschall, Tobias and Schrader, Andrea and Zentis, Peter and Valencia-Schneider, Monica and Kandpal, Niraj and Zuschratter, Werner and Schauss, Astrid and Dickscheid, Timo and Mühlhaus, Timo and von Suchodoletz, Dirk},
 title = {Combining the BIDS and ARC Directory Structures for Multimodal Research Data Organization},
 journal = {Zenodo},
