--- a/src/content/publications/amelung_2023b.bib
+++ b/src/content/publications/amelung_2023b.bib
@@ -1,8 +1,8 @@
-@white_paper{32,
+@misc{amelung_2023b,
 author = {Lisa Amelung and Eva Bodenschatz and Renita Danabalan and Évariste Demandt and Ralf Depping and Franziska Eberl and Barbara Ebert and Sara Espinoza and Stefanie Fuchsloch and Michael Goedicke and Barbara Götz and Cor-dula Hege and Christine Hennig and Christin Henzen and Johannes Hunold and Lukas Jansen and Ulrich Krieger and Cristina Martins Rodrigues and Bernhard Miller and Daniel Nüst and Nicole Schatlowski and Alina Schleuß and Christiane Schneide and Annett Schwarz and Thorsten Schwetje and Jörg Seegert and Thorsten Trippel and Elena Wössner and Wolf Zinke},
 title = {White Paper: Umgang mit Zielen der BLV als Grundlage für die Strukturevaluation},
 journal = {Zenodo},
 doi = {https://doi.org/10.5281/zenodo.8192533},
 year = {2023},
-note = {open access}
+note = {open access},
 }
