--- a/src/content/publications/doerpholz_2023.bib
+++ b/src/content/publications/doerpholz_2023.bib
@@ -1,8 +1,8 @@
-@conference_poster{41,
+@inproceedings{doerpholz_2023,
 author = {Dörpholz, Hannah and Usadel, Björn and Kranz, Angela},
 title = {Using Container Ontologies Built on ISA for (Meta)data Quality Analysis in Transcriptomics},
 journal = {Zenodo},
 doi = {https://doi.org/10.5281/zenodo.8405208},
 year = {2023},
-note = {open access}
+note = {open access},
 }
