--- a/src/content/publications/gauza_2021b.bib
+++ b/src/content/publications/gauza_2021b.bib
@@ -1,8 +1,8 @@
-@conference_paper{45,
+@inproceedings{gauza_2021b,
 author = {Gauza, Holger and Wannenmacher, Fabian and Werner, Johannes and Zajac, Thomas and Krüger, Jens},
 title = {HUBzero as an open-source science gateway within the framework of the Science Data Center BioDATEN},
 journal = {heiBOOKS},
 doi = {https://doi.org/10.11588/heibooks.979.c13749},
 year = {2021},
-note = {open access}
+note = {open access},
 }
