--- a/src/content/publications/gloeckner_2019.bib
+++ b/src/content/publications/gloeckner_2019.bib
@@ -1,8 +1,8 @@
-@white_paper{0,
+@misc{gloeckner_2019,
 author = {Glöckner, Frank Oliver and Diepenbroek, Michael and Felden, Janine and Overmann, Jörg and Bonn, Aletta and Gemeinholzer, Birgit and Güntsch, Anton and König-Ries, Birgitta and Seeger, Bernhard and Pollex-Krüger, Annette and Fluck, Juliane and Pigeot, Iris and Kirsten Toralf and Mühlhaus, Timo and Wolf, Christof and Heinrich, Uwe and Steinbeck, Christoph and Koepler, Oliver and Stegle, Oliver and Weimann, Joachim and Schörner-Sadenius, Thomas and Gutt, Christian and Stahl, Florian and Wagemann, Kurt and Schrade, Torsten and Schmitt, Robert and Eberl, Chris and Gauterin, Frank and Schultz, Martin and Bernard, Lars},
 title = {Berlin Declaration on NFDI Cross-Cutting Topics (Version 1)},
 journal = {Zenodo},
 doi = {https://doi.org/10.5281/zenodo.3457213},
 year = {2019},
-note = {open access}
+note = {open access},
 }
