--- a/src/content/publications/konsortialversammlung_2022.bib
+++ b/src/content/publications/konsortialversammlung_2022.bib
@@ -1,8 +1,8 @@
-@position_paper{17,
+@misc{konsortialversammlung_2022,
 author = {Konsortialversammlung des Vereins Nationale Forschungsdateninfrastruktur (NFDI) e.V.},
 title = {Stellungnahme der NFDI-Konsortien zu Basisdiensten},
 journal = {Zenodo},
 doi = {https://doi.org/10.5281/zenodo.6091657},
 year = {2022},
-note = {open access}
+note = {open access},
 }
