--- a/src/content/publications/muehlhaus_2021.bib
+++ b/src/content/publications/muehlhaus_2021.bib
@@ -1,8 +1,8 @@
-@conference_paper{13,
+@inproceedings{muehlhaus_2021,
 author = {Timo Mühlhaus and Dominik Brilhaus and Marcel Tschöpe and Oliver Maus and Björn Grüning and Christoph Garth and Cristina Martins Rodrigues and Dirk von Suchodoletz},
 title = {DataPLANT – Tools and Services to structure the Data Jungle for fundamental plant researchers},
 journal = {heiDOK, Universitätsbibiothek Heidelberg},
 doi = {https://doi.org/10.11588/heibooks.979.c13724},
 year = {2021},
-note = {open access}
+note = {open access},
 }
