--- a/src/content/publications/suchodoletz_2020.bib
+++ b/src/content/publications/suchodoletz_2020.bib
@@ -1,8 +1,8 @@
-@press_release{2,
+@misc{suchodoletz_2020,
 author = {Dirk von Suchodoletz},
 title = {Pflanzliches Leben besser verstehen},
 journal = { },
 doi = {https://kommunikation.uni-freiburg.de/pm/2020/pflanzliches-leben-besser-verstehen},
 year = {2020},
-note = {open access}
+note = {open access},
 }
