--- a/src/content/publications/suchodoletz_2021e.bib
+++ b/src/content/publications/suchodoletz_2021e.bib
@@ -1,8 +1,8 @@
-@journal_article{6,
+@article{suchodoletz_2021e,
 author = {von Suchodoletz, Dirk and Mühlhaus, Timo and Krüger, Jens and Usadel, Björn and Martins Rodrigues, Cristina},
 title = {DataPLANT – Ein NFDI-Konsortium Der Pflanzen-Grundlagenforschung},
 journal = {Bausteine Forschungsdatenmanagement},
 doi = {https://doi.org/10.17192/bfdm.2021.2.8335},
 year = {2021},
-note = {open access}
+note = {open access},
 }
