--- a/src/content/publications/suchodoletz_2023e.bib
+++ b/src/content/publications/suchodoletz_2023e.bib
@@ -1,8 +1,8 @@
-@conference_paper{20,
+@inproceedings{suchodoletz_2023e,
 author = {Dirk von Suchodoletz and Jonathan Bauer and Marcel Tschöpe and Holger Gauza and Michael Derntl and Steve Kaminski},
 title = {Herausforderungen beim Aufbau eines föderierten Datenrepositories auf Basis von InvenioRDM},
 journal = {heiDOK, Universitätsbibiothek Heidelberg},
 doi = {https://doi.org/10.11588/heibooks.1288.c18069},
 year = {2023},
-note = {open access}
+note = {open access},
 }
