--- a/_old_src/content/publications/saker_2023b.bib
+++ b/_old_src/content/publications/saker_2023b.bib
@@ -1,4 +1,4 @@
-@conference_paper{46,
+@inproceedings{saker_2023b,
 author = {Halima Saker and Jens Kruger and Amir Baleghi and Holger Gauza and Alexander Kirbis and Hamed Jalali and Suvasini Thangaraj and Simon Pirkl},
 title = {Secure and Decentralized Messaging with the Matrix Chat Protocol - Enhancing Communication and Collaboration in Life Sciences Research through Matrix Integration with ELIXIR Federated Authentication},
 journal = {Zenodo},
