--- a/src/content/publications/brilhaus_2023b.bib
+++ b/src/content/publications/brilhaus_2023b.bib
@@ -1,7 +1,7 @@
-@conference_poster{23,
+@inproceedings{brilhaus_2023b,
 author = {Brilhaus, Dominik and Kuhl, Martin and Martins Rodrigues, Cristina and Schrader, Andrea},
 title = {One Resource to Teach Them All},
 journal = {Zenodo},
 doi = {https://doi.org/10.5281/zenodo.8356260},
-year = {2023}
+year = {2023},
 }
