--- a/src/content/publications/krantz_2021.bib
+++ b/src/content/publications/krantz_2021.bib
@@ -1,8 +1,8 @@
-@review_paper{9,
+@article{krantz_2021,
 author = {Maria Krantz and David Zimmer and Stephan O. Adler and Anastasia Kitashova and Edda Klipp and Timo Mühlhaus and Thomas Nägele},
 title = {Data Management and Modeling in Plant Biology},
 journal = {Frontiers Media S.A.},
 doi = {https://doi.org/10.3389/fpls.2021.717958},
 year = {2021},
-note = {open access}
+note = {open access},
 }
