--- a/src/content/publications/suchodoletz_2023b.bib
+++ b/src/content/publications/suchodoletz_2023b.bib
@@ -1,7 +1,7 @@
-@abstract{34,
+@article{suchodoletz_2023b,
 author = {Dirk von Suchodoletz and Yi Sun and Jean-Karim Hériché and Manuel Messner},
 title = {Improving the Research Desktop Experience for OpenStack VDI},
 journal = {TIB Open Publishing},
 doi = {https://doi.org/10.52825/cordi.v1i.413},
-year = {2023}
+year = {2023},
 }
