--- a/src/content/publications/suchodoletz_2023c.bib
+++ b/src/content/publications/suchodoletz_2023c.bib
@@ -1,7 +1,7 @@
-@abstract{33,
+@article{suchodoletz_2023c,
 author = {Dirk von Suchodoletz and Jonathan Bauer and Marcel Tschöpe},
 title = {DataPLANT Cloud Oriented Service Infrastructure},
 journal = {TIB Open Publishing},
 doi = {https://doi.org/10.52825/CoRDI.v1i.414},
-year = {2023}
+year = {2023},
 }
