--- a/src/content/publications/weil_2023.bib
+++ b/src/content/publications/weil_2023.bib
@@ -1,8 +1,15 @@
 @article{weil2023,
-author = {Heinrich Lukas Weil and Kevin Schneider and Marcel Tschöpe and Jonathan Bauer and Oliver Maus and Kevin Frey and Dominik Brilhaus and Cristina Martins Rodrigues and Gajendra Doniparthi and Florian Wetzels and Jonas Lukasczyk and Angela Kranz and Björn Grüning and David Zimmer and Stefan Deßloch and Dirk von Suchodoletz and Björn Usadel and Christoph Garth and Timo Mühlhaus},
-title = {PLANTdataHUB: A collaborative platform for continuous FAIR data sharing in plant research},
-journal = {the plant journal, Wiley},
+author = {Weil, Heinrich Lukas and Schneider, Kevin and Tschöpe, Marcel and Bauer, Jonathan and Maus, Oliver and Frey, Kevin and Brilhaus, Dominik and Martins Rodrigues, Cristina and Doniparthi, Gajendra and Wetzels, Florian and Lukasczyk, Jonas and Kranz, Angela and Grüning, Björn and Zimmer, David and Deßloch, Stefan and von Suchodoletz, Dirk and Usadel, Björn and Garth, Christoph and Mühlhaus, Timo},
+title = {PLANTdataHUB: a collaborative platform for continuous FAIR data sharing in plant research},
+journal = {The Plant Journal},
+volume = {116},
+number = {4},
+pages = {974-988},
+keywords = {ARC Annotated research context, DataHUB, FAIR, FAIR digital object, research data management},
 doi = {https://doi.org/10.1111/tpj.16474},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/tpj.16474},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/tpj.16474},
+abstract = {SUMMARY In modern reproducible, hypothesis-driven plant research, scientists are increasingly relying on research data management (RDM) services and infrastructures to streamline the processes of collecting, processing, sharing, and archiving research data. FAIR (i.e., findable, accessible, interoperable, and reusable) research data play a pivotal role in enabling the integration of interdisciplinary knowledge and facilitating the comparison and synthesis of a wide range of analytical findings. The PLANTdataHUB offers a solution that realizes RDM of scientific (meta)data as evolving collections of files in a directory – yielding FAIR digital objects called ARCs – with tools that enable scientists to plan, communicate, collaborate, publish, and reuse data on the same platform while gaining continuous quality control insights. The centralized platform is scalable from personal use to global communities and provides advanced federation capabilities for institutions that prefer to host their own satellite instances. This approach borrows many concepts from software development and adapts them to fit the challenges of the field of modern plant science undergoing digital transformation. The PLANTdataHUB supports researchers in each stage of a scientific project with adaptable continuous quality control insights, from the early planning phase to data publication. The central live instance of PLANTdataHUB is accessible at (https://git.nfdi4plants.org), and it will continue to evolve as a community-driven and dynamic resource that serves the needs of contemporary plant science.},
 year = {2023},
 note = {open access},
 }
