--- a/src/content/subpageContent/arc-data-hub/trr365.md
+++ b/src/content/subpageContent/arc-data-hub/trr365.md
@@ -1,12 +1,8 @@
 ---
 title: TRR356 (PlantMicrobe)
 summary: The TRR356 (PlantMicrobe) is a DataHUB implementation site specific for the transregional collaboration project PlantMicrobe
-styling:
-  titleColor: darkblue
-  bgColor: white
-  textColor: black
-  emphasisColor: darkblue
-  textPosition: text-only
+icon: tabler:database
+href: https://trr356plantmicrobe.de/for-members-only--gitlab/index.html
 ---
 
 [The TRR356 (PlantMicrobe)](https://trr356plantmicrobe.de/for-members-only--gitlab/index.html) is an ARC Data Hub implementation specific for the transregional collaboration project PlantMicrobe and is hosted at the University of Tübingen and the LMU in Munich.
