--- a/src/content/subpageContent/arc-data-hub/trr365.md
+++ b/src/content/subpageContent/arc-data-hub/trr365.md
@@ -1,10 +1,6 @@
 ---
 title: TRR356 (PlantMicrobe)
-summary: The TRR356 (PlantMicrobe) is a DataHUB implementation site specific for the transregional collaboration project PlantMicrobe
+summary: The TRR356 (PlantMicrobe) is an ARC Data Hub implementation specific for the transregional collaboration project PlantMicrobe
 icon: tabler:database
 href: https://trr356plantmicrobe.de/for-members-only--gitlab/index.html
 ---
-
-[The TRR356 (PlantMicrobe)](https://trr356plantmicrobe.de/for-members-only--gitlab/index.html) is an ARC Data Hub implementation specific for the transregional collaboration project PlantMicrobe and is hosted at the University of Tübingen and the LMU in Munich.
-Only members of the project TRR356 PlantMicrobe have access to this DataHUB and can publish data there.
-Like the nfdi4plants.de DataHUB, the PlantMicrobe DataHUB runs on a federated infrastructure that relies on fail-over strategies to ensure the availability of the service.
