--- a/src/content/subpageContent/arc-data-hub/trr365.md
+++ b/src/content/subpageContent/arc-data-hub/trr365.md
@@ -2,5 +2,5 @@
 title: TRR356 (PlantMicrobe)
 summary: The TRR356 (PlantMicrobe) is an ARC Data Hub implementation specific for the transregional collaboration project PlantMicrobe
 icon: tabler:database
-href: https://gitlab.nfdi4plants.de
+href: https://gitlab.plantmicrobe.de
 ---
